<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FDA Digital Inspection</string>
    <string name="action_settings">Settings</string>
    <string name="SoOF">Summary of Observations/Findings</string>
    <string-array name="MainClass">
        <item>Cosmetics</item>
        <item>Drug</item>
        <item>Food</item>
        <item>Household Urban Hazardous Substance</item>
    </string-array>
    <string-array name="CosFoodHuhsClass">
        <item>Manufacturer</item>
        <item>Distributor</item>
    </string-array>
    <string-array name="DrugClass">
        <item>Manufacturer</item>
        <item>Distributor</item>
        <item>Retail Drug Outlet</item>
    </string-array>
    <string-array name="HUHSClass">
        <item>Household Urban Hazardous Substance</item>
        <item>Toys</item>
        <item>Pesticides</item>
    </string-array>
    <string-array name="ManuClass">
        <item>Manufacturer</item>
        <item>Trader</item>
        <item>Repacker</item>
    </string-array>
    <string-array name="FoodManuClass">
        <item>Bakery</item>
        <item>Diamond Seal</item>
        <item>GMP</item>
        <item>HACCP</item>
        <item>Manufacturer</item>
        <item>Repacker</item>
        <item>Trader</item>
    </string-array>
    <string-array name="RDOClass">
        <item>Drugstore</item>
        <item>RONPD</item>
        <item>Hospital Pharmacy</item>
    </string-array>
    <string-array name="DistriClass">
        <item>Exporter</item>
        <item>Exporter/Importer</item>
        <item>Exporter/Wholesaler</item>
        <item>Exporter/Importer/Wholesaler</item>
        <item>Importer</item>
        <item>Importer/Wholesaler</item>
        <item>Wholesaler</item>
    </string-array>
    <string-array name="Notification">
        <item>Announced</item>
        <item>Unannounced</item>
    </string-array>
    <string-array name="InspectionPurpose">
        <item>Initial</item>
        <item>Renewal</item>
        <item>Routine</item>
    </string-array>
    <string-array name="Deficiencies">
        <item>Thirty (30) calendar days for critical deficiencies</item>
        <item>Forty-five (45) calendar days for major deficiencies &amp; other deficiencies</item>
        <item>Not Applicable</item>
    </string-array>

    <string name="othersdirectives">Others Directives</string>
    <string name="directives1">To always observe Good Manufacturing Practice/ Good Distribution Practice/ Good Storage Practice</string>
    <string name="directives2">For Critical findings</string>
    <string name="directives3">1. Stop production, suspend the line outright or in case of distributor stop further importation and/or distribution, if applicable; inventory and sealing of products found within the premises.</string>
    <string name="directives4">2. Undertakes or causes company recall of affected batches following existing FDA rules and procedure for product recall.</string>
    <string name="directives5">For Warehouse Inspection</string>
    <string name="directives6">For Follow-up Inspection</string>
    <string name="directives7">For Corrective Action/Preventive Action (CAPA) plan</string>
    <string name="directives8">Address the deficiencies and submit CAPA Plan through FDA Central Receiving Unit  including submission of objective evidence of compliance within the specified timeline reckoned on the following day of receipt of summary of observation/finding:</string>
    <string name="directives9">Thirty (30) calendar days for critical deficiencies</string>
    <string name="directives10">Forty-five (45) calendar days for major deficiencies &amp; other deficiencies</string>

    <string name="CAPA">Submitted CAPA</string>
    <string name="Accepted">Accepted</string>
    <string name="NotAccepted">Not Accepted</string>
    <string name="back_to_log_in">Back to Log In</string>
    <string name="fda_logo">FDA Logo</string>
    <string name="next">Next</string>
    <string name="general_information">General Information</string>
    <string name="back">Back</string>
    <string name="observation_findings">OBSERVATION FINDINGS:</string>
    <string name="signatories">Signatories</string>
    <string name="inspected_by">Inspected By</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="save">Save</string>
    <string name="ir_diamondseal">Diamond/Sangkap Pinoy Seal</string>
    <string name="quality_mgt">Quality Management</string>
    <string name="RFO_off">Name of 1st Food-Drug Regulation Officer:</string>
    <string name="RFO_offSig">Signature of 1st Food-Drug Regulation Officer:</string>
    <string name="RFO_off2">Name of 2nd Food-Drug Regulation Officer:</string>
    <string name="RFO_offSig2">Signature of 2nd Food-Drug Regulation Officer:</string>
    <string name="ic_bakery">Bakery</string>
    <string name="ir_haccp">HACCP Implementation</string>
    <string name="ic_fooddistware">Food Distributor Warehouse</string>
    <string name="ic_fooddist">Food Distributor</string>
    <string name="ic_drugstore">Drug Store/Retail Outlet for Non-Prescription Drugs</string>
    <string name="ic_drugtrader">Drug Trader</string>
    <string name="ic_drugdist">Drug Distributor</string>
    <string name="ic_drugdistware">Drug Distributor Warehouse</string>
    <string name="ic_cosmetictd">Cosmetic Trader/Distributor</string>
    <string name="gps_coordinates">GPS Coordinates(Latitude, Longitude):</string>
    <string name="payment_appfee">Payment of Appropriate Fee</string>
    <string name="est_name">Name of Establishment:</string>
    <string name="address">Address:</string>
    <string name="owner">Owner:</string>
    <string name="tel_no">Telephone Number:</string>
    <string name="email_add">E-mail address:</string>
    <string name="purpose_insp">Purpose of Inspection:</string>
</resources>