<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33b5e5"
    android:orientation="vertical"
    android:padding="5dp" >

   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/othersdirectives"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <Button
            android:id="@+id/bPrev1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/round_button"
            android:text="@string/back"
            android:textColor="#000000" />

        <Button
            android:id="@+id/bNext1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/round_button"
            android:text="@string/next"
            android:textColor="#000000" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Observation Findings:"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/etObservationFindings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter a detailed observation during inspection"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Directives:"
                    android:textSize="17sp" />

                <CheckBox
                    android:id="@+id/cbDirectives1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directives1" />

                <CheckBox
                    android:id="@+id/cbDirectives2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directives2" />

                <CheckBox
                    android:id="@+id/cbDirectives3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directives3" />

                <CheckBox
                    android:id="@+id/cbDirectives4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directives4" />

                <CheckBox
                    android:id="@+id/cbDirectives5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directives5" />

                <CheckBox
                    android:id="@+id/cbDirectives6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directives6" />

                <CheckBox
                    android:id="@+id/cbDirectives7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directives7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directives8" />

                <Button
                    android:id="@+id/bDeficiencies"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:gravity="start"
                    android:text="Deficiency Compliance" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>