<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33b5e5"
    android:orientation="vertical"
    android:padding="5dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signatories"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <Button
            android:id="@+id/bPrev2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/round_button"
            android:text="@string/back"
            android:textColor="#000000" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Inspected By"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_layout"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Name of 1st Food-Drug Regulation Officer:" />

                    <EditText
                        android:id="@+id/et1stFDRO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter full name"
                        android:ems="10" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Signature of 1st Food-Drug Regulation Officer:" />

                    <ImageView
                        android:id="@+id/iv1stFDRO"
                        android:layout_width="400dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_imageview"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Name of 2nd Food-Drug Regulation Officer:" />

                    <EditText
                        android:id="@+id/et2ndFDRO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter full name"
                        android:ems="10" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Signature of 2nd Food-Drug Regulation Officer:" />

                    <ImageView
                        android:id="@+id/iv2ndFDRO"
                        android:layout_width="400dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_imageview"
                        android:scaleType="fitXY" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Conformance and Receipt"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_layout"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Name of Establishment&apos;s 1st Representative:" />

                    <EditText
                        android:id="@+id/et1stEstRep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter full name"
                        android:ems="10" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Signature of Establishment&apos;s 1st Representative:" />

                    <ImageView
                        android:id="@+id/iv1stEstRep"
                        android:layout_width="400dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_imageview"
                        android:scaleType="fitXY" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Name of Establishment&apos;s 2nd Representative:" />

                    <EditText
                        android:id="@+id/et2ndEstRep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter full name"
                        android:ems="10" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Signature of Establishment&apos;s 2nd Representative:" />

                    <ImageView
                        android:id="@+id/iv2ndEstRep"
                        android:layout_width="400dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_imageview"
                        android:scaleType="fitXY" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Date of Inspection"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_layout"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="From:" />

                    <DatePicker
                        android:id="@+id/dtpFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/etInspectFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10" />


                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="To:" />

                    <TimePicker
                        android:id="@+id/tpTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/etInspectTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Format: 25 December 2014"
                        android:ems="10" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:background="@drawable/custom_layout" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5" >

                    <Button
                        android:id="@+id/bSave"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5" >

                    <Button
                        android:id="@+id/bPDF"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/generate_pdf"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>